Learningmatrials-lm -db,srrvice,exm,fdbck-h2,gobck

--- a/Lms-Frontend/src/app/student/exam/exam.component.html
+++ b/Lms-Frontend/src/app/student/exam/exam.component.html
@@ -1,5 +1,7 @@
 <div class="backg">
+    <a routerLink="/student" style="color: white; text-decoration: none;">Go Back</a>
     <form name="quiz" id="quiz">
+        <h2 style="color:white;">Exam</h2>
         <div>
             <p>1.What is the best programming language to learn in 2020?</p>
             <p><input type="radio" name="question1" value="HTML" id="" class="q1">A. HTML</p>
