--- a/Lms-Frontend/src/app/student/feedback/feedback.component.html
+++ b/Lms-Frontend/src/app/student/feedback/feedback.component.html
@@ -1,5 +1,7 @@
 <div class="backg">
+    <a routerLink="/student" style="color:black ; text-decoration: none; ">Go Back</a>
     <form name="quiz" id="quiz">
+        <h2>Feedback</h2>
         <div>
             <p>1.Which activities in the classroom do you enjoy the most</p>
             <p><input type="radio" name="question1" value="Fast Facts" id="" class="q1">A. Fast Facts</p>
