--- a/Lms-Frontend/src/app/student/learning-materials/learning-materials.component.html
+++ b/Lms-Frontend/src/app/student/learning-materials/learning-materials.component.html
@@ -1,1 +1,78 @@
-<p>learning-materials works!</p>
+<div class='card'>
+    <div class='card-header'>
+        Learning Materials
+    </div>
+    <a routerLink="/student" style="text-decoration: none;color: black;">Go Back<i
+            class="fa-solid fa-circle-arrow-left"></i></a>
+    <div class='card-body'>
+        <div>
+            <h2>What is JWT and Why you Should use JWT?</h2>
+            <!-- <table class='table'>
+                <!-- *ngIf='products && products.length' -->
+            <!-- <thead> -->
+            <!-- <tr> -->
+            <!-- <th> -->
+
+            <!-- {{showImage? 'Hide' : 'Show'}} Image -->
+
+            <!-- (click)='toggleImage()' -->
+            <!-- </th>
+                        <th>Title</th>
+                        <th>Author</th> -->
+            <!-- <th>Date</th> -->
+            <!-- <th>About</th>
+                        <th>Rating</th> -->
+            <!-- 
+                    </tr>
+
+                </thead>
+                <tbody> -->
+            <!-- <tr *ngFor='let product of products'>
+
+                         [src]='product.image' -->
+            <!-- [style.width.px]='imageWidth'
+                        [style.margin.px]='imageMargin' -->
+            <!-- <td><img></td>
+                        <!-- *ngIf='showImage' -->
+            <!-- <td> {{ product.title }}</td> -->
+
+            <!-- <td> {{ product.author }}</td> -->
+
+            <!-- <td>{{ product.releasedate }}</td> -->
+            <!-- <td> {{ product.about }}</td> -->
+
+            <!-- <td> {{product.rating}}</td> -->
+
+            <!-- <td> -->
+            <!-- (click)="editProduct(product)" -->
+            <!-- <button class="btn btn-warning" style="cursor:pointer" style="margin-left: 20px;">
+                                Edit</button>
+                            <button class="btn btn-danger" style="cursor:pointer">
+                                Delete</button> -->
+            <!-- (click)="deleteProduct(product)" -->
+            <!-- </td>
+                    </tr> -->
+            <!-- <tr>
+                        <td>
+                           
+                    </tr>
+                </tbody>
+            </table> -->
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/7Q17ubqLfaM"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+        </div>
+    </div>
+
+    <div class='card-body'>
+        <div>
+            <h2>What is JWT Authentication Nodejs ?</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/mbsmsi7l3r4"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
