--- a/Lms-Frontend/src/app/home/home.component.html
+++ b/Lms-Frontend/src/app/home/home.component.html
@@ -34,10 +34,10 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a href="#main" class="nav-link">Home</a>
+              <a routerLink="" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
-              <a href="" class="nav-link">Courses</a>
+              <a routerLink="courses" class="nav-link">Courses</a>
             </li>
             <li class="nav-item">
               <a href="" class="nav-link">Login</a>
