--- a/Lms-Frontend/src/app/student/exam/exam.component.html
+++ b/Lms-Frontend/src/app/student/exam/exam.component.html
@@ -3,39 +3,42 @@
     <form name="quiz" id="quiz">
         <h2 style="color:white;">Exam</h2>
         <div>
-            <p>1.What is the best programming language to learn in 2020?</p>
-            <p><input type="radio" name="question1" value="HTML" id="" class="q1">A. HTML</p>
-            <p><input type="radio" name="question1" value="Python" id="" class="q1">B. Python</p>
-            <p><input type="radio" name="question1" value="Javascript" id="" class="q1">C. Javscript</p>
-            <p><input type="radio" name="question1" value="Swift" id="" class="q1">D. Swift</p>
+            <p>1.Javascript is an ______ language?</p>
+            <p><input type="radio" name="question1" value="Object-Oriented" id="" class="q1">A. Object-Oriented</p>
+            <p><input type="radio" name="question1" value="Object-Based" id="" class="q1">B. Object-Based</p>
+            <p><input type="radio" name="question1" value="Procedural" id="" class="q1">C. Procedural</p>
+            <p><input type="radio" name="question1" value="None of the above" id="" class="q1">D. None of the above</p>
         </div>
         <div>
-            <p>2.What is the biggest country in the world?</p>
-            <p><input type="radio" name="question2" value="Russia" id="" class="q2">A. Russia</p>
-            <p><input type="radio" name="question2" value="America" id="" class="q2">B. America</p>
-            <p><input type="radio" name="question2" value="China" id="" class="q2">C. China</p>
-            <p><input type="radio" name="question2" value="Canada" id="" class="q2">D. Canada</p>
+            <p>2.Which of the following keywords is used to define a variable in Javascript?</p>
+            <p><input type="radio" name="question2" value="var" id="" class="q2">A. var</p>
+            <p><input type="radio" name="question2" value="let" id="" class="q2">B. let</p>
+            <p><input type="radio" name="question2" value="Both A and B" id="" class="q2">C. Both A and B</p>
+            <p><input type="radio" name="question2" value="None of the above" id="" class="q2">D. None of the above</p>
         </div>
         <div>
-            <p>3.What is the capital of China?</p>
-            <p><input type="radio" name="question3" value="Guanzhou" id="" class="q3">A. Guanzhou</p>
-            <p><input type="radio" name="question3" value="Nanjing" id="" class="q3">B. Nanjing</p>
-            <p><input type="radio" name="question3" value="Shanghai" id="" class="q3">C. Shanghai</p>
-            <p><input type="radio" name="question3" value="Beijing" id="" class="q3">D. Beijing</p>
+            <p>3.What does the abbreviation HTML stand for?</p>
+            <p><input type="radio" name="question3" value="HyperText Markup Language" id="" class="q3">A. HyperText
+                Markup Language</p>
+            <p><input type="radio" name="question3" value="HighText Markup Language" id="" class="q3">B. HighText Markup
+                Language</p>
+            <p><input type="radio" name="question3" value="HyperText Markdown Language" id="" class="q3">C. HyperText
+                Markdown Language</p>
+            <p><input type="radio" name="question3" value="None of the above" id="" class="q3">D. None of the above</p>
         </div>
         <div>
-            <p>4.What is the biggest problem in the world now?</p>
-            <p><input type="radio" name="question4" value="Financial" id="" class="q4">A. Financial</p>
-            <p><input type="radio" name="question4" value="Coronavirus" id="" class="q4">B. Coronavirus</p>
-            <p><input type="radio" name="question4" value="Economical" id="" class="q4">C. Economical</p>
-            <p><input type="radio" name="question4" value="None" id="" class="q4">D. None</p>
+            <p>4.How many sizes of headers are available in HTML by default?</p>
+            <p><input type="radio" name="question4" value="5" id="" class="q4">A. 5</p>
+            <p><input type="radio" name="question4" value="4" id="" class="q4">B. 4</p>
+            <p><input type="radio" name="question4" value="1" id="" class="q4">C. 1</p>
+            <p><input type="radio" name="question4" value="6" id="" class="q4">D. 6</p>
         </div>
         <div>
-            <p>5.How many seasons are there in a year?</p>
-            <p><input type="radio" name="question5" value="1" id="" class="q5">A. 1</p>
-            <p><input type="radio" name="question5" value="2" id="" class="q5">B. 2</p>
-            <p><input type="radio" name="question5" value="3" id="" class="q5">C. 3</p>
-            <p><input type="radio" name="question5" value="4" id="" class="q5">D. 4</p>
+            <p>5.The Node.js modules can be exposed using:</p>
+            <p><input type="radio" name="question5" value="Javascript" id="" class="q5">A. expose</p>
+            <p><input type="radio" name="question5" value="C" id="" class="q5">B. module</p>
+            <p><input type="radio" name="question5" value="C++" id="" class="q5">C. exports</p>
+            <p><input type="radio" name="question5" value="CoffeSc" id="" class="q5">D. All of the above</p>
         </div>
         <input type="button" value="Submit" onclick="check()">
     </form>
