exam question value  answer sync 5thq&a

--- a/Lms-Frontend/src/app/student/exam/exam.component.html
+++ b/Lms-Frontend/src/app/student/exam/exam.component.html
@@ -35,10 +35,10 @@
         </div>
         <div>
             <p>5.The Node.js modules can be exposed using:</p>
-            <p><input type="radio" name="question5" value="Javascript" id="" class="q5">A. expose</p>
-            <p><input type="radio" name="question5" value="C" id="" class="q5">B. module</p>
-            <p><input type="radio" name="question5" value="C++" id="" class="q5">C. exports</p>
-            <p><input type="radio" name="question5" value="CoffeSc" id="" class="q5">D. All of the above</p>
+            <p><input type="radio" name="question5" value="expose" id="" class="q5">A. expose</p>
+            <p><input type="radio" name="question5" value="module" id="" class="q5">B. module</p>
+            <p><input type="radio" name="question5" value="exports" id="" class="q5">C. exports</p>
+            <p><input type="radio" name="question5" value="All of the above" id="" class="q5">D. All of the above</p>
         </div>
         <input type="button" value="Submit" onclick="check()">
     </form>
