--- a/Lms-Frontend/src/app/student/feedback/feedback.component.css
+++ b/Lms-Frontend/src/app/student/feedback/feedback.component.css
@@ -1,14 +1,10 @@
-form{
-    margin-left:2rem;
-    margin-right:2rem;
-    padding-bottom:2rem;
-    padding-top:2rem;
-   
-    
-}
+
 .backg{
     background-image: url('../../../assets/images/afif-kusuma-D1z3dwROc44-unsplash.jpg');
     background-size: cover;
     height: 1200px;
     opacity: 90%;
+}
+h3{
+    padding: 20px;
 }
