edit for trainer and student and sigup is correct

--- a/Lms-Frontend/src/app/admin/adm-student/adm-student.component.html
+++ b/Lms-Frontend/src/app/admin/adm-student/adm-student.component.html
@@ -26,7 +26,7 @@
                                  <td>{{student.studentedu}}</td>
                                  <td>
                                     <td>
-                                        <button class="btn btn-primary">Edit</button>
+                                        <button class="btn btn-primary" (click)="editStudent(student)">Edit</button>
                                     </td> 
                                     <td>
                                        <button class="btn btn-danger" (click)="deleteStudent(student)">Delete</button>
