--- a/Lms-Frontend/src/app/admin/adm-tarainer/adm-tarainer.component.html
+++ b/Lms-Frontend/src/app/admin/adm-tarainer/adm-tarainer.component.html
@@ -27,7 +27,7 @@
                                  <td>{{trainer.traineredu}}</td>
                                  <td>
                                     <td>
-                                        <button class="btn btn-primary">Edit</button>
+                                        <button class="btn btn-primary"  (click)="editTrainer(trainer)">Edit</button>
                                     </td> 
                                     <td>
                                         <button class="btn btn-danger" (click)="deleteTrainer(trainer)">Delete</button>
