--- a/Lms-Frontend/src/app/signup/trainer-signup/trainer-signup.component.html
+++ b/Lms-Frontend/src/app/signup/trainer-signup/trainer-signup.component.html
@@ -93,8 +93,8 @@
              <small class="text-danger" [class.d-none]="traineredu.valid || traineredu.untouched">Enter valid qualification</small>
           </div>
           <!-- skill -->
-          <div class="mb-3">
-            <label  class="form-label">Skill Set</label>
+          <!-- <div class="mb-3">
+            <label  class="form-label">Skills</label>
             <input type="text" 
             class="form-control"
              id="skill" 
@@ -104,12 +104,12 @@
              placeholder="Ender skill set"
              [class.is-invalid]="trainerskill.invalid && trainerskill.touched"
             pattern="[A-Za-z\s0-9\+.]{2,25}"
-             required>
+             required> -->
              <!-- validation -->
-             <small class="text-danger" [class.d-none]="trainerskill.valid || trainerskill.untouched">Enter valid skill set</small>
-          </div>
+             <!-- <small class="text-danger" [class.d-none]="trainerskill.valid || trainerskill.untouched">Enter valid skill set</small>
+          </div> -->
           <!-- experience -->
-          <div class="mb-3">
+          <!-- <div class="mb-3">
             <label  class="form-label">Experience</label>
             <input type="text" 
             class="form-control"
@@ -120,10 +120,10 @@
              placeholder="Ender years of experience in teaching"
              [class.is-invalid]="trainerexp.invalid && trainerexp.touched"
              pattern="[0-9\+.]{1,2}"
-              required>
+              required> -->
              <!-- validation -->
-             <small class="text-danger" [class.d-none]="trainerexp.valid || trainerexp.untouched">Enter valid experience</small>
-          </div>
+             <!-- <small class="text-danger" [class.d-none]="trainerexp.valid || trainerexp.untouched">Enter valid experience</small>
+          </div> -->
           <!-- password -->
         <div class="mb-3">
           <label  class="form-label">Password</label>
