--- a/Lms-Frontend/src/app/home/home.component.html
+++ b/Lms-Frontend/src/app/home/home.component.html
@@ -219,6 +219,60 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js"
     integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
     crossorigin="anonymous"></script>
+
+    <!-- Contact us -->
+
+    <section class="contact_us">
+      <div class="container">
+          <div class="row">
+              <div class="col-md-10 offset-md-1">
+                  <div class="contact_inner">
+                      <div class="row">
+                          <div class="col-md-10">
+                              <div class="contact_form_inner">
+                                  <div class="contact_field">
+                                      <h3>Contact Us</h3>
+                                      <p>Feel Free to contact us any time. We will get back to you as soon as we can!.</p>
+                                      <input type="text" class="form-control form-group" placeholder="Name" />
+                                      <input type="text" class="form-control form-group" placeholder="Email" />
+                                      <textarea class="form-control form-group" placeholder="Message"></textarea>
+                                      <button class="contact_form_submit">Send</button>
+                                  </div>
+                              </div>
+                          </div>
+                          <div class="col-md-2">
+                              <div class="right_conatct_social_icon d-flex align-items-end">
+                                 <div class="socil_item_inner d-flex">
+                                    <li><a href="#"><i class="fab fa-facebook-square"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                                 </div>
+                              </div>
+                          </div>
+                      </div>
+                      <div class="contact_info_sec">
+                          <h4>Contact Info</h4>
+                          <div class="d-flex info_single align-items-center">
+                              <i class="fas fa-headset"></i>
+                              <span>0471-2700811/12/13</span>
+                          </div>
+                          <div class="d-flex info_single align-items-center">
+                              <i class="fas fa-envelope-open-text"></i>
+                              <span>info@ictkerala.org</span>
+                          </div>
+                          <div class="d-flex info_single align-items-center">
+                              <i class="fas fa-map-marked-alt"></i>
+                              <span>ICT Academy of Kerala L-9, Thejaswini Building Technopark campus Karyavattom-695581</span>
+                          </div>
+          
+                      </div>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+
+
 </body>
 
 </html>
