feedback-2 and exam-2 added

--- a/Lms-Frontend/src/app/student/exam/exam2/exam2.component.html
+++ b/Lms-Frontend/src/app/student/exam/exam2/exam2.component.html
@@ -3,41 +3,43 @@
     <form name="quiz" id="quiz">
         <h2 style="color:white;">Exam-2</h2>
         <div>
-            <p>1.Javascript is an ______ language?</p>
-            <p><input type="radio" name="question1" value="Object-Oriented" id="" class="q1">A. Object-Oriented</p>
-            <p><input type="radio" name="question1" value="Object-Based" id="" class="q1">B. Object-Based</p>
-            <p><input type="radio" name="question1" value="Procedural" id="" class="q1">C. Procedural</p>
+            <p>1.The full form of CSS is:</p>
+            <p><input type="radio" name="question1" value="Cascading Style Sheets" id="" class="q1">A.Cascading Style
+                Sheets</p>
+            <p><input type="radio" name="question1" value="Coloured Special Sheets" id="" class="q1">B.Coloured Special
+                Sheets</p>
+            <p><input type="radio" name="question1" value="Color and Style Sheets" id="" class="q1">C.Color and Style
+                Sheets</p>
             <p><input type="radio" name="question1" value="None of the above" id="" class="q1">D. None of the above</p>
         </div>
         <div>
-            <p>2.Which of the following keywords is used to define a variable in Javascript?</p>
-            <p><input type="radio" name="question2" value="var" id="" class="q2">A. var</p>
-            <p><input type="radio" name="question2" value="let" id="" class="q2">B. let</p>
+            <p>2.How can we change the background color of an element?</p>
+            <p><input type="radio" name="question2" value="background-color" id="" class="q2">A. background-color</p>
+            <p><input type="radio" name="question2" value="color" id="" class="q2">B. color</p>
             <p><input type="radio" name="question2" value="Both A and B" id="" class="q2">C. Both A and B</p>
             <p><input type="radio" name="question2" value="None of the above" id="" class="q2">D. None of the above</p>
         </div>
         <div>
-            <p>3.What does the abbreviation HTML stand for?</p>
-            <p><input type="radio" name="question3" value="HyperText Markup Language" id="" class="q3">A. HyperText
-                Markup Language</p>
-            <p><input type="radio" name="question3" value="HighText Markup Language" id="" class="q3">B. HighText Markup
-                Language</p>
-            <p><input type="radio" name="question3" value="HyperText Markdown Language" id="" class="q3">C. HyperText
-                Markdown Language</p>
+            <p>3.How can we change the text color of an element?</p>
+            <p><input type="radio" name="question3" value="background-color" id="" class="q3">A. backgorund-color</p>
+            <p><input type="radio" name="question3" value="color" id="" class="q3">B. color</p>
+            <p><input type="radio" name="question3" value="Both A and  B" id="" class="q3">C. Both A and
+                background-color</p>
             <p><input type="radio" name="question3" value="None of the above" id="" class="q3">D. None of the above</p>
         </div>
         <div>
-            <p>4.How many sizes of headers are available in HTML by default?</p>
-            <p><input type="radio" name="question4" value="5" id="" class="q4">A. 5</p>
-            <p><input type="radio" name="question4" value="4" id="" class="q4">B. 4</p>
-            <p><input type="radio" name="question4" value="1" id="" class="q4">C. 1</p>
-            <p><input type="radio" name="question4" value="6" id="" class="q4">D. 6</p>
+            <p>4.Which of the following methods is used to access HTML elements using Javascript?</p>
+            <p><input type="radio" name="question4" value="getElementsbyId()" id="" class="q4">A. getElementsbyId()</p>
+            <p><input type="radio" name="question4" value="getElementsByClassName()" id="" class="q4">B.
+                getElementsByClassName()</p>
+            <p><input type="radio" name="question4" value="Both A and B" id="" class="q4">C. Both A and B</p>
+            <p><input type="radio" name="question4" value="None of the above" id="" class="q4">D. None of the above</p>
         </div>
         <div>
-            <p>5.The Node.js modules can be exposed using:</p>
-            <p><input type="radio" name="question5" value="expose" id="" class="q5">A. expose</p>
-            <p><input type="radio" name="question5" value="module" id="" class="q5">B. module</p>
-            <p><input type="radio" name="question5" value="exports" id="" class="q5">C. exports</p>
+            <p>5.Which of the following methods can be used to display data in some form using Javascript?</p>
+            <p><input type="radio" name="question5" value="document.write()" id="" class="q5">A. document.write()</p>
+            <p><input type="radio" name="question5" value="console.log()" id="" class="q5">B.console.log()</p>
+            <p><input type="radio" name="question5" value="window.alert()" id="" class="q5">C.window.alert()</p>
             <p><input type="radio" name="question5" value="All of the above" id="" class="q5">D. All of the above</p>
         </div>
         <input type="button" value="Submit" onclick="check()">
