--- a/Lms-Frontend/src/app/student/feedback/feedback2/feedback2.component.html
+++ b/Lms-Frontend/src/app/student/feedback/feedback2/feedback2.component.html
@@ -1,26 +1,26 @@
 <div class="backg">
-    <a routerLink="/student/stufeedbacks" style="color:black ; text-decoration: none; ">Go Back</a>
+    <a routerLink="student/stufeedbacks" style="color:black ; text-decoration: none; ">Go Back</a>
 
 
     <form name="quiz" id="quiz">
         <h2>Feedback-2</h2>
         <div>
-            <p>1.Which activities in the classroom do you enjoy the most</p>
-            <p><input type="radio" name="question1" value="Fast Facts" id="" class="q1">A. Fast Facts</p>
-            <p><input type="radio" name="question1" value="Memory" id="" class="q1">B. Memory</p>
-            <p><input type="radio" name="question1" value="Treasure Hunt" id="" class="q1">C. Treasure Hunt</p>
-            <p><input type="radio" name="question1" value="Other" id="" class="q1">D. Other</p>
+            <p>1.How would you evaluate the overall academic experience?</p>
+            <p><input type="radio" name="question1" value="Very Dissatisfied" id="" class="q1">A. Very Dissatisfied</p>
+            <p><input type="radio" name="question1" value="Not Satisfied" id="" class="q1">B. Not Satisfied</p>
+            <p><input type="radio" name="question1" value="Satisfied" id="" class="q1">C.Satisfied</p>
+            <p><input type="radio" name="question1" value="Very Satisfied" id="" class="q1">D.Very Satisfied</p>
         </div>
         <div>
-            <p>2.Given a chance, what is one change that you would like to see?</p>
-            <p><input type="radio" name="question2" value="Teaching method" id="" class="q2">A. Teaching method</p>
-            <p><input type="radio" name="question2" value="Time taken to complete a chapter" id="" class="q2">B. Time
-                taken
-                to complete a chapter</p>
-            <p><input type="radio" name="question2" value="Extracurricular activities" id="" class="q2">C.
-                Extracurricular
-                activities</p>
-            <p><input type="radio" name="question2" value="Other" id="" class="q2">D. Other</p>
+            <p>2.How satisfied are you with the learning materials?</p>
+            <p><input type="radio" name="question2" value="Very Dissatisfied" id="" class="q2">A.Very Dissatisfied</p>
+            <p><input type="radio" name="question2" value="Not
+                Satisfied" id="" class="q2">B. Not
+                Satisfied
+            </p>
+            <p><input type="radio" name="question2" value="Satisfied" id="" class="q2">C.
+                Satisfied</p>
+            <p><input type="radio" name="question2" value="Very Satisfied" id="" class="q2">D.Very Satisfied</p>
         </div>
         <div>
             <p>3.Do you have supportive classmates?</p>
@@ -35,25 +35,23 @@
 
         </div>
         <div>
-            <p>4.What motivates you to learn more?</p>
-            <p><input type="radio" name="question4" value="Asking a lot of questions to the teacher" id="" class="q4">A.
-                Asking a lot of questions to the
-                teacher</p>
-            <p><input type="radio" name="question4" value="Completing various assignments" id="" class="q4">B.
-                Completing
-                various assignments
+            <p>4.The lectures and test complemented eachother?</p>
+            <p><input type="radio" name="question4" value="Strongly Agree" id="" class="q4">A.
+                Strongly Agree</p>
+            <p><input type="radio" name="question4" value="Agree" id="" class="q4">B.
+                Agree
             </p>
-            <p><input type="radio" name="question4" value="Sports and other extracurricular activities" id=""
-                    class="q4">C.
-                Sports and other extracurricular
-                activities</p>
-            <p><input type="radio" name="question4" value="Other" id="" class="q4">D. Other</p>
+            <p><input type="radio" name="question4" value="Strongly Disagree" id="" class="q4">C.
+                Strongly Disagree</p>
+            <p><input type="radio" name="question4" value="Disagree" id="" class="q4">D.Disagree</p>
         </div>
         <div>
-            <p>5.Do you think that the school provides you with adequate sports facilities?p>
-            <p><input type="radio" name="question5" value="Yes" id="" class="q5">A. Yes</p>
-            <p><input type="radio" name="question5" value="No" id="" class="q5">B. No</p>
-            <p><input type="radio" name="question5" value="Not Always" id="" class="q5">C. Not always</p>
+            <p>5.The Course was organized in a manner that helped me understand the underlying concepts?
+
+            <p><input type="radio" name="question5" value="Strongly Agree" id="" class="q5">A.Strongly Agree</p>
+            <p><input type="radio" name="question5" value="Disagree" id="" class="q5">B. Disagree</p>
+            <p><input type="radio" name="question5" value="Agree" id="" class="q5">C. Agree</p>
+            <p><input type="radio" name="question5" value="Strongly Disagree" id="" class="q5">C. Strongly Disagree</p>
 
         </div>
         <input type="button" value="Submit" onclick="check()">
