update learning materials

--- a/Lms-Frontend/src/app/student/learning-materials/learning-materials.component.html
+++ b/Lms-Frontend/src/app/student/learning-materials/learning-materials.component.html
@@ -4,6 +4,7 @@
     </div>
     <a routerLink="/student" style="text-decoration: none;color: black;">Go Back<i
             class="fa-solid fa-circle-arrow-left"></i></a>
+    <h2>1.)JWT</h2>
     <div class='card-body'>
         <div>
             <h2>What is JWT and Why you Should use JWT?</h2>
