--- a/Lms-Frontend/src/app/admin/adm-tra-access/adm-tra-access.component.html
+++ b/Lms-Frontend/src/app/admin/adm-tra-access/adm-tra-access.component.html
@@ -11,8 +11,8 @@
                         <th>Email</th>
                         <th>Contact Number</th>
                         <th>Qualification</th>
-                        <!-- <th>Skill Set</th>
-                        <th>Teaching Experience</th> -->
+                        <th>Skill Set</th>
+                        <th>Teaching Experience</th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -25,8 +25,8 @@
                                  <td>{{trainer.traineremail}}</td>
                                  <td>{{trainer.trainerph}}</td>
                                  <td>{{trainer.traineredu}}</td>
-                                 <!-- <td>{{trainer.trainerskill}}</td>
-                                 <td>{{trainer.trainerexp}}</td> -->
+                                 <td>{{trainer.trainerskill}}</td>
+                                 <td>{{trainer.trainerexp}}</td>
                                  <td>
                                     <td>
                                         <button class="btn btn-success" (click)="approveTrainer(trainer)" >APPROVE</button>
