--- a/Lms-Frontend/src/app/admin/update-tra/update-tra.component.html
+++ b/Lms-Frontend/src/app/admin/update-tra/update-tra.component.html
@@ -44,10 +44,26 @@
                                  <td><label>Trainer Education</label></td>
                                  <td><input type="text" name="t_edu" #traineredu="ngModel" [style.width.px]=600 [(ngModel)]=" trainerItem.traineredu"
                                      [class.is-invalid]="traineredu.invalid && traineredu.touched"
-                                     required pattern="[A-Za-z\s0-9\+.]{2,25}"
+                                      pattern="[A-Za-z\s0-9\+.]{2,25}"
                                      required>
                                      <small class="text-danger" [class.d-none]="traineredu.valid || traineredu.untouched">Enter valid qualification</small></td>
                                </tr>
+                               <tr>
+                                <td><label>Trainer skill</label></td>
+                                <td><input type="text" name="t_skill" #trainerskill="ngModel" [style.width.px]=600 [(ngModel)]=" trainerItem.trainerskill"
+                                    [class.is-invalid]="trainerskill.invalid && trainerskill.touched"
+                                     pattern="[A-Za-z\s0-9\+.]{2,25}"
+                                    required>
+                                    <small class="text-danger" [class.d-none]="trainerskill.valid || trainerskill.untouched">Enter valid skills</small></td>
+                              </tr>
+                              <tr>
+                                <td><label>Trainer expeience</label></td>
+                                <td><input type="text" name="t_exp" #trainerexp="ngModel" [style.width.px]=600 [(ngModel)]=" trainerItem.trainerexp"
+                                    [class.is-invalid]="trainerexp.invalid && trainerexp.touched"
+                                     pattern="[0-9\+.]{1,2}"
+                                    required>
+                                    <small class="text-danger" [class.d-none]="trainerexp.valid || trainerexp.untouched">Enter valid experience</small></td>
+                              </tr>
                              <td></td>
                              
                              <button class="btn btn-success btn-lg" [style.width.px]=530 type="submit" [disabled]="traEdit.form.invalid">Update</button>
