couse in student and trainer

--- a/Lms-Frontend/src/app/admin/adm-stu-access/adm-stu-access.component.html
+++ b/Lms-Frontend/src/app/admin/adm-stu-access/adm-stu-access.component.html
@@ -12,7 +12,7 @@
                         <th>Email</th>
                         <th>Contact Number</th>
                         <th>Qualification</th>
-                        <!-- <th>PASSWORD</th> -->
+                        <th>Couses</th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -25,6 +25,7 @@
                                  <td>{{student.studentemail}}</td>
                                  <td>{{student.studentph}}</td>
                                  <td>{{student.studentedu}}</td>
+                                 <td>{{student.stucours}}</td>
                                  <!-- <td>{{student.studentpwd}}</td> -->
                                  <td>
                                     <td>
