--- a/Lms-Frontend/src/app/admin/adm-tra-access/adm-tra-access.component.html
+++ b/Lms-Frontend/src/app/admin/adm-tra-access/adm-tra-access.component.html
@@ -13,6 +13,7 @@
                         <th>Qualification</th>
                         <th>Skill Set</th>
                         <th>Teaching Experience</th>
+                        <th>Couses</th>
                         <th></th>
                         <th></th>
                         <th></th>
@@ -27,6 +28,7 @@
                                  <td>{{trainer.traineredu}}</td>
                                  <td>{{trainer.trainerskill}}</td>
                                  <td>{{trainer.trainerexp}}</td>
+                                 <td>{{trainer.tracours}}</td>
                                  <td>
                                     <td>
                                         <button class="btn btn-success" (click)="approveTrainer(trainer)" >APPROVE</button>
