time of approval done

--- a/Lms-Frontend/src/app/admin/adm-student/adm-student.component.html
+++ b/Lms-Frontend/src/app/admin/adm-student/adm-student.component.html
@@ -16,6 +16,7 @@
                         <th>Date of entrollment</th>
                         <th></th>
                         <th></th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody  style="text-align:center;">
@@ -26,6 +27,7 @@
                                  <td>{{student.studentph}}</td>
                                  <td>{{student.studentedu}}</td>
                                  <td>{{student.stucours}}</td>
+                                 <td>{{student.studate}}</td>
                                  <td>
                                     <td>
                                         <button class="btn btn-warning" (click)="editStudent(student)">Edit</button>
