--- a/Lms-Frontend/src/app/admin/adm-tarainer/adm-tarainer.component.html
+++ b/Lms-Frontend/src/app/admin/adm-tarainer/adm-tarainer.component.html
@@ -16,7 +16,8 @@
                         <th>Skills</th>
                         <th>Experience in teaching</th>
                         <th>Course</th>
-                        <th>Date of entrollment</th>
+                        <th>Date of enrollment</th>
+                        <th></th>
                         <th></th>
                         <th></th>
                     </tr>
@@ -31,6 +32,7 @@
                                  <td>{{trainer.trainerskill}}</td>
                                  <td>{{trainer.trainerexp}}</td>
                                  <td>{{trainer.tracours}}</td>
+                                 <td>{{trainer.tradate}}</td>
                                  <td>
                                     <td>
                                         <button class="btn btn-warning"  (click)="editTrainer(trainer)">Edit</button>
